tests/ui/parser/type-ascription-in-pattern.stderr
error: expected one of `!`, `,`, `.`, `::`, `?`, `{`, `}`, or an operator, found `=>`
  --> $DIR/type-ascription-in-pattern.rs:3:16
   |
LL |     match x {
   |           - while parsing this struct
LL |         x: i32 => x,
   |               -^^ expected one of 8 possible tokens
   |               |
   |               help: try adding a comma: `,`

error: expected identifier, found keyword `true`
  --> $DIR/type-ascription-in-pattern.rs:4:9
   |
LL |     match x {
   |           - while parsing this struct
LL |         x: i32 => x,
LL |         true => 42.,
   |         ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `false`
  --> $DIR/type-ascription-in-pattern.rs:5:9
   |
LL |     match x {
   |           - while parsing this struct
...
LL |         false => 0.333,
   |         ^^^^^ expected identifier, found keyword

error: struct literals are not allowed here
  --> $DIR/type-ascription-in-pattern.rs:2:11
   |
LL |       match x {
   |  ___________^
LL | |         x: i32 => x,
LL | |         true => 42.,
LL | |         false => 0.333,
LL | |     }
   | |_____^
   |
help: surround the struct literal with parentheses
   |
LL ~     match (x {
LL |         x: i32 => x,
LL |         true => 42.,
LL |         false => 0.333,
LL ~     })
   |

error: expected one of `.`, `?`, `{`, or an operator, found `}`
  --> $DIR/type-ascription-in-pattern.rs:7:1
   |
LL |     match x {
   |     ----- while parsing this `match` expression
...
LL |     }
   |      - expected one of `.`, `?`, `{`, or an operator
LL | }
   | ^ unexpected token

error: expected one of `...`, `..=`, `..`, or `|`, found `:`
  --> $DIR/type-ascription-in-pattern.rs:11:11
   |
LL |         42: i32 => (),
   |           ^ --- specifying the type of a pattern isn't supported
   |           |
   |           expected one of `...`, `..=`, `..`, or `|`

error: expected `|`, found `:`
  --> $DIR/type-ascription-in-pattern.rs:12:10
   |
LL |         _: f64 => (),
   |          ^ --- specifying the type of a pattern isn't supported
   |          |
   |          expected `|`

error: expected one of `@` or `|`, found `:`
  --> $DIR/type-ascription-in-pattern.rs:13:10
   |
LL |         x: i32 => (),
   |          ^ --- specifying the type of a pattern isn't supported
   |          |
   |          expected one of `@` or `|`
   |
help: maybe write a path separator here
   |
LL |         x::i32 => (),
   |          ~~

error: aborting due to 8 previous errors

